syntax = "proto3";

package basic_test_action.v1;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/protoc/pkg/testdata/fixtures/capabilities/basicaction";

message Config {
  string camel_case_in_schema_for_testing = 1;
  int32 snake_case_in_schema_for_testing = 2;
}

message Inputs {
  bool input_thing = 1;
}

message Outputs {
  string adapted_thing = 1;
}

service BasicAction {
  rpc PerformAction (Inputs) returns (Outputs) {}
}
